# GURPSChase

./: .gitignore  ActionFactory.cpp  ActionFactory.h  CMakeLists.txt  LICENSE  README.md  attackaction.cpp  attackaction.h  chaseaction.cpp  chaseaction.h  config.h.in  driver.cpp  driver.h  main.cpp  participant.cpp  participant.h  serializable.h  skill.cpp  skill.h  test_actionfactory.cpp  test_attackaction.cpp  test_defaultaction.cpp  test_driver.cpp  test_driver_speedbonus.cpp  test_participant.cpp  test_skill.cpp  test_vehicle.cpp  test_vehicle_driver.cpp  vehicle.cpp  vehicle.h
data/: actions.json
gtest/: Makefile  config.status  libtool
